<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>onrobot_sd_tutorials</name>
    <version>0.0.0</version>
    <description>An example of ROS2 humble package with OnRobot screw driver.</description>
    <maintainer email="taku8926@gmail.com">Takuya Kiyokawa</maintainer>
    <license>BSD</license>

    <!-- Package runtime and build dependencies -->
    <depend>rclpy</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>geometry_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>launch</depend>
    <depend>launch_ros</depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>