<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>onrobot_vgc10_description</name>
    <version>0.0.0</version>
    <description>OnRobot VGC10 description files</description>
    <maintainer email="taku8926@gmail.com">Takuya Kiyokawa</maintainer>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- Package runtime and build dependencies -->
    <exec_depend>joint_state_publisher_gui</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>xacro</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>